--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body{
   display:flex;
   flex-direction: column;
 }
+.gridDiv{
+  display:flex;
+  flex-direction:column;
+  border: 1px solid black;
+}
 .box{
   border: 1px solid black;
   box-sizing: border-box;
