--- a/style.css
+++ b/style.css
@@ -1,32 +1,69 @@
 body{
   display: flex;
-  justify-content: center;
+  height:100vh;
+  /*justify-content: center;*/
   align-items:center;
+  flex-direction: column;
+  background-color:#141414
 }
 
 #gridContainer{
     display: flex;
     flex-wrap: wrap;
     box-sizing: content-box;
-    border: 1px solid black;
-    margin-top: 50px;
+    /*border: 1px solid black;*/
+    /*margin-top: 50px;*/
+}
+#leftBar{
+  box-sizing: content-box;
+  display:flex;
+  flex-direction: column;
+  /*flex-wrap:wrap;*/
+  margin-right: 10px;
+  border:1px solid white;
+  width:200px;
+  /*height:100%;*/
+  height:420px;
+}
+#spritePortrait{
+  box-sizing: border-box;
+  border: 1px solid red;
+  width: 200px;
+  height: 300px;
+}
+#dialogBox{
+  box-sizing: border-box;
+  border: 1px solid red;
+  width: 200px;
+  height: 120px;
+  background-color: #d1d1d1;
+}
+.mainBody{
+  display:flex;
+  justify-content: center;
+  align-items:center;
+}
+.topBody{
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  border:1px solid red;
+  width: 700px;
+  height: 200px;
 }
 .btnDiv{
   display:flex;
   flex-direction: column;
 }
-.gridDiv{
-  display:flex;
-  flex-direction:column;
-  border: 1px solid black;
-}
 .box{
-  border: 1px solid black;
-  box-sizing: border-box;
-
+  margin: 1px;
+  box-sizing: content-box;
   display:flex;
   justify-content: center;
   align-items: center;
+  background-color:#c2c0bd;
+  border-bottom: 5px solid #8b8b8b;
+  border-right: 5px solid #555555;
 }
 .dot{
   display:flex;
@@ -35,6 +72,4 @@ body{
   border-radius: 50%;
   border:1px solid black;
   box-sizing: content-box;
-  height:50px;
-  width:50px;
 }
