--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     box-sizing: content-box;
-    /*border: 1px solid black;*/
+    border: 1px solid red;
     /*margin-top: 50px;*/
 }
 #leftBar{
@@ -38,6 +38,7 @@ body{
   height: 120px;
   background-color: #d1d1d1;
 }
+
 .mainBody{
   display:flex;
   justify-content: center;
@@ -45,11 +46,42 @@ body{
 }
 .topBody{
   display:flex;
-  justify-content: center;
-  align-items:center;
+  box-sizing: content-box;
+  justify-content: flex-start;
+  flex-direction:column;
+  flex-wrap:wrap;
   border:1px solid red;
   width: 700px;
-  height: 200px;
+  height: 225px;
+  margin-bottom: 10px;
+}
+.scoreDiv{
+  box-sizing: border-box;
+  border: 1px solid white;
+  width: 48px;
+  height: 75px;
+}
+.shipDiv{
+  box-sizing: border-box;
+  border: 1px solid white;
+  width: 100px;
+  height: 75px;
+}
+.shotDiv{
+  box-sizing: border-box;
+  border: 1px solid white;
+  width: 350px;;
+  height: 75px;
+}
+#bossBig{
+  box-sizing: border-box;
+  border: 1px solid white;
+}
+.bossDiv{
+  box-sizing: border-box;
+  border: 1px solid red;
+  width: 200px;;
+  height: 74.33px;
 }
 .btnDiv{
   display:flex;
@@ -61,9 +93,18 @@ body{
   display:flex;
   justify-content: center;
   align-items: center;
-  background-color:#c2c0bd;
+  /*background-color:#c2c0bd;*/
   border-bottom: 5px solid #8b8b8b;
   border-right: 5px solid #555555;
+
+  /*box-shadow:
+    inset 0 0 0 4px #eee,
+    inset 0 0 0 8px #ddd,
+    inset 0 0 0 12px #ccc,
+    inset 0 0 0 16px #bbb,
+    inset 0 0 0 20px #aaa,
+    inset 0 0 0 20px #999,
+    inset 0 0 0 20px #888;*/
 }
 .dot{
   display:flex;
