--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
   margin-bottom: 10px;
 }
 .scoreDiv{
+  display:flex;
   box-sizing: border-box;
   border: 1px solid white;
   width: 48px;
@@ -110,7 +111,7 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  border-radius: 50%;
-  border:1px solid black;
+  /*border-radius: 50%;*/
+  /*border:1px solid black;*/
   box-sizing: content-box;
 }
