--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ body{
   height: 72px;
 }
 .shotDiv{
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   border: 1px solid white;
   width: 350px;;
@@ -138,4 +140,43 @@ body{
 }
 #scoreThree{
   color: yellow;
+}
+.redShot{
+  margin: 1px;
+  border: 4px dotted rgb(255, 61, 0);
+  background-color: rgb(110, 15, 15);
+  height: 20px;
+  width: 20px;
+  border-radius: 50%
+}
+.blueShot{
+  border: 4px solid rgb(11, 63, 163);
+  background-color: rgb(22, 180, 180);
+  height: 10px;
+  width: 30px;
+  border-radius: 50%
+}
+#shotThree{
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: flex-start;
+}
+.yellowShot{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 2px solid rgb(255, 253, 14);
+  background-color: rgb(172, 180, 22);
+  height: 10px;
+  width: 30px;
+  border-radius: 50%
+}
+.yellowShotDiv{
+  border: 1px; solid red;
+  height: 60px;
+  width: 32px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items: center;
 }
