--- a/style.css
+++ b/style.css
@@ -21,22 +21,48 @@ body{
   /*flex-wrap:wrap;*/
   margin-right: 10px;
   border:1px solid white;
-  width:200px;
+  width:201px;
   /*height:100%;*/
   height:420px;
 }
 #spritePortrait{
   box-sizing: border-box;
   border: 1px solid red;
+  width: 201px;
+  height: 301px;
+}
+.pilotBox{
+  box-sizing: border-box;
+  border: 1px solid white;
   width: 200px;
   height: 300px;
 }
+
 #dialogBox{
   box-sizing: border-box;
   border: 1px solid red;
   width: 200px;
   height: 120px;
   background-color: #d1d1d1;
+  display: flex;
+  flex-direction: column;
+
+}
+#pilotName{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 25px;
+  width: 100%:
+}
+#pilotSpeech{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 100%;
+  width: 100%:
 }
 
 .mainBody{
@@ -84,6 +110,8 @@ body{
 #bossBig{
   box-sizing: border-box;
   border: 1px solid white;
+  width: 200px;
+  height: 225px;
 }
 .bossDiv{
   box-sizing: border-box;
