--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body{
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
   width: 48px;
   height: 75px;
 }
@@ -103,13 +103,13 @@ body{
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
   width: 350px;;
   height: 75px;
 }
 #bossBig{
   box-sizing: border-box;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
   width: 200px;
   height: 225px;
 }
