--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   display: flex;
   height:100vh;
+  width: 95%;
   /*justify-content: center;*/
   align-items:center;
   flex-direction: column;
@@ -73,11 +74,11 @@ body{
 .topBody{
   display:flex;
   box-sizing: content-box;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction:column;
   flex-wrap:wrap;
   border:1px solid red;
-  width: 700px;
+  width: 100%;
   height: 225px;
   margin-bottom: 10px;
 }
@@ -86,7 +87,7 @@ body{
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  /*border: 1px solid white;*/
+  border: 1px solid white;
   width: 48px;
   height: 75px;
 }
@@ -95,7 +96,7 @@ body{
   justify-content: center;
   align-items: center;
   box-sizing: content-box;
-  /*border: 1px solid white;*/
+  border: 1px solid white;
   width: 102px;
   height: 72px;
 }
@@ -103,13 +104,32 @@ body{
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  /*border: 1px solid white;*/
-  width: 350px;;
+  border: 1px solid white;
+  width: 150px;;
   height: 75px;
+}
+#bossHp{
+  border:1px solid red;
+  height: 100%;
+  width: 5%;
+  border-radius: 30%;
+}
+#shipHpDiv{
+  display:flex;
+  flex-direction:column;
+  height: 225px;
+  width: 20%;
+}
+.shipHp{
+  width:100%;
+  height:50px;
+  margin:12.5px;
+  border:1px solid red;
+  border-radius: 25%;
 }
 #bossBig{
   box-sizing: border-box;
-  /*border: 1px solid white;*/
+  border: 1px solid white;
   width: 200px;
   height: 225px;
 }
