--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   display: flex;
   height:100vh;
+  min-height: 700px;
   width: 95%;
   /*justify-content: center;*/
   align-items:center;
@@ -13,7 +14,7 @@ body{
     flex-wrap: wrap;
     box-sizing: content-box;
     border: 1px solid red;
-    /*margin-top: 50px;*/
+    margin-top: 52px;
 }
 #leftBar{
   box-sizing: content-box;
@@ -73,16 +74,18 @@ body{
 }
 .topBody{
   display:flex;
-  box-sizing: content-box;
+  /*box-sizing: content-box;*/
   justify-content: center;
   flex-direction:column;
   flex-wrap:wrap;
   border:1px solid red;
   width: 100%;
-  height: 225px;
+  min-height:231px;
+  height: 231px;
   margin-bottom: 10px;
 }
 .scoreDiv{
+  box-sizing: content-box;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -91,14 +94,20 @@ body{
   width: 48px;
   height: 75px;
 }
+.shipLane{
+  display:flex;
+  flex-wrap: wrap;
+  /*border:1px solid blue;*/
+  height:75px
+}
 .shipDiv{
   display:flex;
   justify-content: center;
   align-items: center;
-  box-sizing: content-box;
+  box-sizing: border-box;
   border: 1px solid white;
   width: 102px;
-  height: 72px;
+  height: 75px;
 }
 .shotDiv{
   display: flex;
@@ -142,6 +151,11 @@ body{
 .btnDiv{
   display:flex;
   flex-direction: column;
+}
+.boxDropGrid{
+  display:flex;
+  flex-direction: column;
+  border:1px solid white;
 }
 .box{
   margin: 1px;
